k8-specs/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dev-guest-book
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: q2io-llc
    nginx.ingress.kubernetes.io/tls-acme: 'true'
    kubernetes.io/tls-acme: 'true'
    ingress.kubernetes.io/force-ssl-redirect: "true"

spec:
  rules:
  - host: 
    http:
      paths:
        - backend:
            serviceName: guest-book
            servicePort: 9000
  - host: www.guest-book.tk
    http:
      paths:
        - backend:
            serviceName: guest-book
            servicePort: 9000
  tls:
  - hosts:
      -  guest-book.tk
      -  www.guest-book.tk
    secretName: tls-letsencrypt-q2io-llc
